--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,11 @@ osx_image: xcode10.1
 language: objective-c
 cache: cocoapods
 podfile: Example/Podfile
+# xcode_project: Example/com.awareframework.ios.sensor.gyroscope.xcodeproj
+# xcode_scheme:  Example/com.awareframework.ios.sensor.gyroscope-Example
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 - pod install --project-directory=Example
 #script:
-#- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/com.awareframework.ios.sensor.gyroscope.xcworkspace -scheme com.awareframework.ios.sensor.gyroscope-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/com.awareframework.ios.sensor.gyroscope.xcworkspace -scheme com.awareframework.ios.sensor.gyroscope-Example -sdk iphonesimulator10.0 ONLY_ACTIVE_ARCH=NO | xcpretty
 #- pod lib lint
