--- a/.travis.yml
+++ b/.travis.yml
@@ -2,27 +2,16 @@
 # * https://www.objc.io/issues/6-build-tools/travis-ci/
 # * https://github.com/supermarin/xcpretty#usage
 
-
 osx_image: xcode10.1
 language: objective-c
-# cache: cocoapods
+#cache: cocoapods
 podfile: Example/Podfile
+xcode_project: Example/com.awareframework.ios.sensor.gyroscope.xcodeproj
+xcode_scheme:  Example/com.awareframework.ios.sensor.gyroscope-Example
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 - pod install --project-directory=Example
 script:
-#- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/com.awareframework.ios.sensor.core.xcworkspace -scheme com.awareframework.ios.sensor.core-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-#
-
-#osx_image: xcode10.1
-#language: objective-c
-#cache: cocoapods
-#podfile: Example/Podfile
-# xcode_project: Example/com.awareframework.ios.sensor.gyroscope.xcodeproj
-# xcode_scheme:  Example/com.awareframework.ios.sensor.gyroscope-Example
-#before_install:
-#- gem install cocoapods # Since Travis is not always on latest version
-#- pod install --project-directory=Example
-#script:
+- pod lib lint --allow-warnings
 #- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/com.awareframework.ios.sensor.gyroscope.xcworkspace -scheme com.awareframework.ios.sensor.gyroscope-Example -sdk iphonesimulator10.0 ONLY_ACTIVE_ARCH=NO | xcpretty
 #- pod lib lint
