--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ osx_image: xcode10.1
 language: objective-c
 #cache: cocoapods
 podfile: Example/Podfile
+xcode_scheme:  com.awareframework.ios.sensor.gyroscope-Example
 xcode_project: Example/com.awareframework.ios.sensor.gyroscope.xcodeproj
-xcode_scheme:  Example/com.awareframework.ios.sensor.gyroscope-Example
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 - pod install --project-directory=Example
