--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,15 @@
-# references:
-# * https://www.objc.io/issues/6-build-tools/travis-ci/
-# * https://github.com/supermarin/xcpretty#usage
-
 osx_image: xcode10.1
 language: objective-c
-#cache: cocoapods
+cache: cocoapods
 podfile: Example/Podfile
-xcode_scheme:  com.awareframework.ios.sensor.gyroscope-Example
-xcode_project: Example/com.awareframework.ios.sensor.gyroscope.xcodeproj
 before_install:
-- gem install cocoapods # Since Travis is not always on latest version
+- gem install cocoapods
+- pod repo update
 - pod install --project-directory=Example
+
 script:
-- pod lib lint --allow-warnings
-#- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/com.awareframework.ios.sensor.gyroscope.xcworkspace -scheme com.awareframework.ios.sensor.gyroscope-Example -sdk iphonesimulator10.0 ONLY_ACTIVE_ARCH=NO | xcpretty
-#- pod lib lint
+  - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/com.awareframework.ios.sensor.gyroscope.xcworkspace -scheme com.awareframework.ios.sensor.gyroscope-Example -sdk iphonesimulator12.1 -destination OS=12.1,name="iPhone X" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO -allowProvisioningUpdates | XCPRETTY
+  - pod lib lint com.awareframework.ios.sensor.gyroscope.podspec --allow-warnings
+
+after_success:
+- echo 'success!'
