--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 
 script:
   - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/com.awareframework.ios.sensor.gyroscope.xcworkspace -scheme com.awareframework.ios.sensor.gyroscope-Example -sdk iphonesimulator12.1 -destination OS=12.1,name="iPhone X" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO -allowProvisioningUpdates | XCPRETTY
-  - pod lib lint com.awareframework.ios.sensor.gyroscope.podspec --allow-warnings
+  # - pod lib lint com.awareframework.ios.sensor.gyroscope.podspec --allow-warnings
 
 after_success:
 - echo 'success!'
