Add test codes and fix minor issues

--- a/Example/com.awareframework.ios.sensor.gyroscope.xcodeproj/xcshareddata/xcschemes/com.awareframework.ios.sensor.gyroscope-Example.xcscheme
+++ b/Example/com.awareframework.ios.sensor.gyroscope.xcodeproj/xcshareddata/xcschemes/com.awareframework.ios.sensor.gyroscope-Example.xcscheme
@@ -82,7 +82,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "E3C4FA5AA62944421EF20ECE96A9A1B7"
+            BuildableName = "com_awareframework_ios_sensor_gyroscope.framework"
+            BlueprintName = "com.awareframework.ios.sensor.gyroscope"
+            ReferencedContainer = "container:Pods/Pods.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
