--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ Pods/
 Example/Podfile.lock
 Example/Pods/
 # Example/com.awareframework.ios.sensor.gyroscope.xcworkspace/
+
+.build
+Packages
+.swiftpm
+.*.sw?
